Fixes horizontal scrollbar due to navigation.

--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -32,7 +32,7 @@
 }
 
 .content .container {
-    width:;
+    width:100%;
 }
 
 .undecorated-link:hover {
